Update 3. Katana Modern Web Crawler.md

--- a/2. Reconnaissance/3. Katana Modern Web Crawler.md
+++ b/2. Reconnaissance/3. Katana Modern Web Crawler.md
@@ -4,8 +4,11 @@
 **Katana** is a modern **web crawler and spidering tool** developed by **ProjectDiscovery**. It is specially designed for **security researchers** and **penetration testers**, offering high **speed**, **modularity**, and the ability to handle **modern web applications** effectively.
 
 ---
+Sure! Here is your content **without emojis** and neatly formatted:
 
-## 🔑 Key Features of Katana
+---
+
+## Key Features of Katana
 
 * **High Performance**
   Built for speed and efficiency using modern concurrency techniques. It can handle **large-scale web applications** quickly.
@@ -34,7 +37,7 @@
 
 ---
 
-## ⚙️ Installation
+## Installation
 
 Install Katana using Go:
 
@@ -44,15 +47,15 @@ go install github.com/projectdiscovery/katana/cmd/katana@latest
 
 ---
 
-## 🚀 Basic Usage
+## Basic Usage
 
-### 🔍 Show Help Menu
+### Show Help Menu
 
 ```bash
 katana -h
 ```
 
-### 🌐 Simple Crawl
+### Simple Crawl
 
 To perform a basic crawl:
 
@@ -60,13 +63,13 @@ To perform a basic crawl:
 katana -u https://uwu.armourinfosec.com
 ```
 
-### 💾 Save Output to a File
+### Save Output to a File
 
 ```bash
 katana -u https://uwu.armourinfosec.com -o armourinfosec.com-katana-output.txt
 ```
 
-### 🧠 JavaScript-Aware Crawling
+### JavaScript-Aware Crawling
 
 Enable JavaScript parsing:
 
@@ -74,7 +77,7 @@ Enable JavaScript parsing:
 katana -u https://uwu.armourinfosec.com -jc
 ```
 
-### 📏 Depth Limitation
+### Depth Limitation
 
 Control crawling depth using the `-d` flag:
 
@@ -84,19 +87,18 @@ katana -u https://uwu.armourinfosec.com -d 3
 
 ---
 
-## 🧹 Post-Processing Output
+## Post-Processing Output
 
-### ❌ Remove Entries Containing "uwa.armourinfosec.com"
+### Remove Entries Containing "uwa.armourinfosec.com"
 
 ```bash
 cat armourinfosec.com-katana-output.txt | grep -v uwa\.armourinfosec\.com
 ```
 
-### 📄 List Unique JavaScript Files (Remove Query Parameters, Sort, Deduplicate)
+### List Unique JavaScript Files (Remove Query Parameters, Sort, Deduplicate)
 
 ```bash
 cat armourinfosec.com-katana-output.txt | grep '\.js' | cut -d '?' -f 1 | sort | uniq
 ```
 
 ---
-
