Update 3. Katana Modern Web Crawler.md

--- a/2. Reconnaissance/3. Katana Modern Web Crawler.md
+++ b/2. Reconnaissance/3. Katana Modern Web Crawler.md
@@ -37,9 +37,13 @@
 ---
 
 ## Installation
+Install Go (golang)
+```bash
+apt update
+apt install golang -y
+```
 
 Install Katana using Go:
-
 ```bash
 go install github.com/projectdiscovery/katana/cmd/katana@latest
 ```
