Update 6.  WHOIS Lookup.md

--- a/2. Reconnaissance/6.  WHOIS Lookup.md
+++ b/2. Reconnaissance/6.  WHOIS Lookup.md
@@ -153,3 +153,27 @@ Check historical ownership or DNS changes:
 
 ---
 
+## 🇮🇳 Indian Trademark Public Search
+
+**Website**: [https://tmrsearch.ipindia.gov.in/tmrpublicsearch/](https://tmrsearch.ipindia.gov.in/tmrpublicsearch/)
+
+This is **not a WHOIS lookup**, but it's used to search for **registered trademarks in India**.
+
+### 🔍 What You Can Find:
+
+* Trademark owner name
+* Application/registration number
+* Trademark status (registered, objected, etc.)
+* Class of goods/services (1–45)
+
+### 🛠️ Use Cases:
+
+* Check if a trademark name is already registered
+* Avoid trademark conflicts
+* Verify legal status before using a brand name
+
+> Ideal for **brand protection**, **legal checks**, and **startup branding**.
+
+---
+
+
