Update 7. Content Delivery Network (CDN).md

--- a/2. Reconnaissance/7. Content Delivery Network (CDN).md
+++ b/2. Reconnaissance/7. Content Delivery Network (CDN).md
@@ -76,10 +76,10 @@ Can handle sudden traffic spikes without overwhelming the origin server.
 
 ## 🌍 Popular CDN Providers
 
-* **Cloudflare** — Security-focused, global presence, free tier available.
-* **Amazon CloudFront (AWS)** — Seamlessly integrates with AWS services.
-* **Akamai** — Enterprise-grade, widely used, and one of the oldest CDN providers.
-* **Fastly** — Real-time caching and edge computing features.
+* [**Cloudflare**](https://www.cloudflare.com) — Security-focused, global presence, free tier available.
+* [**Amazon CloudFront (AWS)**](https://aws.amazon.com/cloudfront/) — Seamlessly integrates with AWS services.
+* [**Akamai**](https://www.akamai.com) — Enterprise-grade, widely used, and one of the oldest CDN providers.
+* [**Fastly**](https://www.fastly.com) — Real-time caching and edge computing features.
 
 ---
 
