Update 7. Content Delivery Network (CDN).md

--- a/2. Reconnaissance/7. Content Delivery Network (CDN).md
+++ b/2. Reconnaissance/7. Content Delivery Network (CDN).md
@@ -122,4 +122,110 @@ A CDN significantly improves **speed**, **security**, **availability**, and **sc
 ```
 
 ---
+---
+
+# 🔍 How to Check if a Website is Using a CDN
+
+A website using a **Content Delivery Network (CDN)** often shows signs such as altered DNS records, specific HTTP headers, or edge server responses.
+
+---
+
+## 🌐 Use Online Tools
+
+These tools can quickly identify if a website is using a CDN:
+
+* [CDN Finder by CDNPlanet](https://www.cdnplanet.com/tools/cdnfinder/)
+* [What's My DNS](https://www.whatsmydns.net)
+* [WebPageTest](https://www.webpagetest.org) → Check the “CDN Provider” column in the waterfall result.
+
+---
+
+## 📥 Check HTTP Response Headers
+
+Use `curl` or browser developer tools to inspect the HTTP headers.
+
+```bash
+curl -I https://example.com
+```
+
+Look for headers like:
+
+* `cf-ray`, `cf-cache-status` → **Cloudflare**
+* `x-amz-cf-id` → **AWS CloudFront**
+* `x-akamai-*`, `akamai-*` → **Akamai**
+* `x-cache`, `x-served-by`, `via` → **Generic CDN or caching servers**
+
+---
+
+## 🌐 Check DNS Records
+
+CDNs often use custom **CNAME** or **A** records.
+
+```bash
+nslookup example.com
+# or
+dig example.com
+```
+
+Look for domain names like:
+
+* `*.cloudflare.net`
+* `*.cdn.cloudflare.net`
+* `*.akamaiedge.net`
+* `*.edgekey.net`
+* `*.fastly.net`
+
+---
+
+## 📍 Analyze IP Address Ownership
+
+1. Get the website’s IP:
+
+   ```bash
+   ping example.com
+   ```
+
+2. Look up who owns the IP:
+
+   ```bash
+   whois <IP-ADDRESS>
+   ```
+
+If the IP belongs to a known CDN provider, the website is likely using a CDN.
+
+---
+
+## 🧪 Use Browser Developer Tools
+
+1. Open Developer Tools (`F12`)
+2. Go to the **Network** tab
+3. Reload the page
+4. Inspect resource headers for:
+
+   * CDN clues in **Response Headers**
+   * **Remote Address** (may show edge server locations)
+
+---
+
+## 🧰 Use BuiltWith or Wappalyzer
+
+* [BuiltWith](https://builtwith.com)
+* [Wappalyzer](https://www.wappalyzer.com)
+
+These tools provide a full tech stack analysis, including whether a CDN is in use.
+
+---
+
+## 📋 Summary
+
+| Method               | What to Look For                            |
+| -------------------- | ------------------------------------------- |
+| CDN Finder Tools     | Direct confirmation of CDN usage            |
+| HTTP Headers         | CDN-specific headers like `cf-cache-status` |
+| DNS Records          | CNAMEs pointing to known CDN domains        |
+| IP Lookup            | IP owned by a CDN provider                  |
+| Browser Dev Tools    | Edge or cache locations in headers          |
+| BuiltWith/Wappalyzer | Full technology stack info including CDN    |
+
+---
 
