--- a/2. Reconnaissance/7. Content Delivery Network (CDN).md
+++ b/2. Reconnaissance/7. Content Delivery Network (CDN).md
@@ -122,6 +122,8 @@ A CDN significantly improves **speed**, **security**, **availability**, and **sc
 ```
 
 ---
+<img src="https://user-images.githubusercontent.com/74038190/212284100-561aa473-3905-4a80-b561-0d28506553ee.gif" width="100%">
+
 ---
 
 # 🔍 How to Check if a Website is Using a CDN
