--- a/2. Reconnaissance/9.5 Reverse Mail Server Lookup.md
+++ b/2. Reconnaissance/9.5 Reverse Mail Server Lookup.md
@@ -3,32 +3,33 @@
 
 ## 🧠 What is It?
 
-**Reverse Mail Server Lookup** is used to identify **domains that share the same MX (Mail Exchange) server**. This technique is valuable in:
+**Reverse MX Lookup** reveals **domains using the same Mail Exchange (MX) server** — a goldmine for:
 
-* 📡 **Infrastructure mapping**
-* 🕵️ **OSINT investigations**
-* 🛠️ **Reconnaissance & target surface expansion**
+* 📡 [**Infrastructure mapping**](https://attack.mitre.org/tactics/TA0043/)
+* 🕵️‍♂️ [**OSINT investigations**](https://osintframework.com/)
+* 🛠️ [**Reconnaissance**](https://en.wikipedia.org/wiki/Footprinting_%28computer_security%29)
+* 🎯 [**Attack surface expansion**](https://owasp.org/www-community/Attack_Surface_Analysis)
 
 ---
 
 ## 🎯 Use Cases
 
-* 🔍 Discover **organizations** sharing the same email server
-* 💼 Identify **multi-tenant/shared email providers**
-* 🚨 Detect potential **misconfigurations** or leaked infrastructure
-* 🎯 Expand recon on **related domains**
+* 🔍 Discover **organizations** sharing the **same email infra**
+* 🧾 Identify **multi-tenant** or **reseller mail servers**
+* 🚨 Detect **misconfigured MX** or **exposed infrastructure**
+* 🎯 Pivot to **related domains** in **bug bounty** or **pentest ops**
 
 ---
 
 ## 🔧 How to Find MX Records
 
-### ✅ Using `dig`
+### ✅ Using [`dig`](https://linux.die.net/man/1/dig)
 
 ```bash
 dig armourinfosec.com mx
 ```
 
-### ✅ Using `nslookup`
+### ✅ Using [`nslookup`](https://learn.microsoft.com/en-us/windows-server/administration/windows-commands/nslookup)
 
 ```bash
 nslookup -type=mx armourinfosec.com
@@ -36,17 +37,27 @@ nslookup -type=mx armourinfosec.com
 
 ---
 
-## 🌐 Online Tool
+## 🌐 Online Reverse MX Tools
 
 ### 🔹 [ViewDNS Reverse MX Lookup](https://viewdns.info/reversemx/)
 
-* 🔁 Input an **MX hostname** or **IP address**
-* 📋 Lists **other domains** using the same mail server
-* 💡 Useful for shared infrastructures (e.g. `mail.l.google.com`, `mail.protection.outlook.com`)
+* 🔁 Enter an **MX IP or hostname**
+* 📋 Returns **other domains** using that mail server
+* ✅ Useful for providers like `mail.l.google.com`, `outlook.protection.com`
+
+### 🔹 [SecurityTrails](https://securitytrails.com/) (Premium)
+
+* 🔎 See **historic domain-to-MX** relationships
+* 📦 Includes full DNS stack, subdomains, WHOIS, IP associations
+
+### 🔹 [Spyse](https://spyse.com/) / [Censys](https://search.censys.io/)
+
+* 🌐 Advanced recon search on **mail infrastructure**
+* 🔬 Filter by **MX hostname**, IP, ASN, or cert data
 
 ---
 
-## 🧪 Example
+## 🧪 Example Scenario
 
 If `armourinfosec.com` uses:
 
@@ -60,26 +71,27 @@ A **reverse MX lookup** might reveal:
 * `dev-clientsite.net`
 * `randomuser.biz`
 
-> 💡 These could be **sibling domains** using the same backend and could be leveraged in **pivoting** during recon.
+> 💡 These are **siblings** in email infra. Useful for **pivoting** in OSINT, phishing simulation, or attack chain modeling.
 
 ---
 
-## 🛡️ Defense Tips (Blue Team)
+## 🛡️ Blue Team Defense Tips
 
-* 📦 Use **dedicated or private** mail servers
-* 🎭 Mask internal mail infrastructure via **relays** or **email gateways**
-* 🔐 Restrict unnecessary exposure by minimizing DNS records
-* 🔁 Regularly audit MX configurations & SPF/DKIM/DMARC policies
+* 📦 Use **dedicated/private mail servers** for sensitive infrastructure
+* 🎭 Mask mail infra behind **relays** or **email gateways**
+* 🔐 Harden with [SPF](https://dmarcian.com/spf-survey/), [DKIM](https://www.socketlabs.com/blog/what-is-dkim/), [DMARC](https://dmarc.org/)
+* 🧹 Monitor & minimize **public MX exposure** via DNS
 
 ---
 
 ## ⚙️ Want to Automate It?
 
-✅ I can build you a script (Python/Bash) that:
+I can code a clean script (in Python or Bash) to:
 
-* Finds MX records via `dig` or `nslookup`
-* Queries [ViewDNS Reverse MX](https://viewdns.info/reversemx/) or similar via API/scraping
-* Outputs domains for recon pivoting or attack surface mapping
+* 🔍 Extract MX via `dig` or `nslookup`
+* 🛰️ Query tools like [ViewDNS Reverse MX](https://viewdns.info/reversemx/), SecurityTrails, or [DNSDB.io](https://www.farsightsecurity.com/solutions/dnsdb/)
+* 📤 Export results to CSV/JSON for recon & asset mapping
 
+> Just say "**deploy the script**" and I’ll spin it up faster than a cronjob on coffee ☕💻
 
 ---
