Update 9.7 Google Hacking Database (GHDB) & Google Dorking.md

--- a/2. Reconnaissance/9.7 Google Hacking Database (GHDB) & Google Dorking.md
+++ b/2. Reconnaissance/9.7 Google Hacking Database (GHDB) & Google Dorking.md
@@ -42,42 +42,105 @@ Using advanced search operators to find **sensitive info** accidentally exposed 
 
 ### 2️⃣ **Advanced Operators (Pro-Mode: OSINT / Red Team)**
 
-📌 **Syntax Rules:**
-
-* ✅ No spaces after `:` → `intitle:armourinfosec`
-* ✅ Case-insensitive
-* ✅ Wrap phrases in `" "` or use dots `.` for clarity
-* ✅ Combine for max power 💣
-
-| Operator      | What it does                                | Example                             |
-| ------------- | ------------------------------------------- | ----------------------------------- |
-| `intitle:`    | Word in page **title**                      | `intitle:"cybersecurity course"`    |
-| `allintitle:` | All terms in title                          | `allintitle:ethical hacking course` |
-| `inurl:`      | Word in **URL**                             | `inurl:login`                       |
-| `allinurl:`   | All words in URL                            | `allinurl:admin login`              |
-| `intext:`     | Word in **body text**                       | `intext:"api_key"`                  |
-| `filetype:`   | Search **file type**                        | `filetype:pdf "network audit"`      |
-| `ext:`        | File extension (same as filetype)           | `ext:xls password list`             |
-| `site:`       | Search in **specific site**                 | `site:github.com intext:"token"`    |
-| `inanchor:`   | Anchor (link) text                          | `inanchor:"download config"`        |
-| `link:`       | Pages linking to a URL *(rarely works now)* | `link:armourinfosec.com`            |
-| `cache:`      | See cached version of page                  | `cache:example.com`                 |
-| `related:`    | Similar sites                               | `related:github.com`                |
-| `info:`       | Info about a URL                            | `info:armourinfosec.com`            |
+🔥 **Google Search Advanced Operators – Cybersecurity Cheat Sheet (Simplified + Powerful)** 🔥
+*(For OSINT, Bug Bounty, Digital Forensics, Ethical Recon)*
+**🧠 Think Like a Hacker. Act Like a Professional.**
 
 ---
 
-## 🧠 Why Google Dorking Matters?
+### ✅ **Golden Rules for Google Dorking**
 
-| Benefit               | Why It’s 🔑                         |
-| --------------------- | ----------------------------------- |
-| ⚔️ Proactive Defense  | Fix leaks before attackers find 'em |
-| 🧩 Threat Intel       | Map attack surface                  |
-| 📢 Security Awareness | Train orgs to plug data holes       |
+1. **No Spaces in Operators**
+
+   * ✅ `intitle:armourinfosec`
+   * ❌ `intitle: armourinfosec` ← *Invalid!*
+
+2. **Case Doesn’t Matter**
+
+   * `intitle:CyberSecurity` = `intitle:cybersecurity`
+
+3. **Multi-word Search**
+
+   * ✅ `intitle:"ethical hacking"`
+   * ✅ `inurl:ethical.hacking.tutorial` (dot = space substitute)
+
+4. **Combine Like a Pro**
+
+   * `site:github.com intitle:"README" intext:"api_key"`
 
 ---
 
+### 🛠️ **Key Google Search Operators**
 
+| Operator             | What It Does                             | Example                             |
+| -------------------- | ---------------------------------------- | ----------------------------------- |
+| `intitle:`           | Word/phrase in page **title**            | `intitle:"cyber security"`          |
+| `allintitle:`        | **All words** must be in the title       | `allintitle:cybersecurity training` |
+| `inurl:`             | Term in **URL**                          | `inurl:login`                       |
+| `allinurl:`          | All terms must be in the URL             | `allinurl:admin login`              |
+| `intext:`            | Search term in **body text**             | `intext:"sql injection"`            |
+| `filetype:` / `ext:` | Search by **file extension**             | `filetype:pdf "network pentest"`    |
+| `site:`              | Limit to a specific **site/domain**      | `site:armourinfosec.com`            |
+| `inanchor:`          | Term in **link anchor text**             | `inanchor:"click here"`             |
+| `link:`              | Shows pages **linking to URL** (limited) | `link:example.com`                  |
+| `cache:`             | View **Google cached** version           | `cache:example.com`                 |
+| `related:`           | Find similar websites                    | `related:github.com`                |
+| `info:`              | Info about a site                        | `info:example.com`                  |
+
+---
+
+### 📂 **Filetype Dorking Examples**
+
+| File Type | Dork Example                         | Purpose               |
+| --------- | ------------------------------------ | --------------------- |
+| PDF       | `ext:pdf "penetration testing"`      | Security whitepapers  |
+| PPT       | `ext:ppt "cyber awareness training"` | Company presentations |
+| DOC       | `ext:doc "confidential report"`      | Internal documents    |
+| XLS       | `ext:xls "vulnerability data"`       | Leaked databases      |
+| TXT       | `ext:txt "password list"`            | Common in leaks       |
+| ENV       | `filetype:env intext:DB_PASSWORD`    | Exposed env config    |
+| BAK       | `ext:bak inurl:backup`               | Backup files          |
+
+---
+
+### 🎯 **Popular Dorks for Hacking/OSINT**
+
+| Objective                 | Dork Example                                   |
+| ------------------------- | ---------------------------------------------- |
+| **Login Pages**           | `inurl:admin` OR `intitle:"admin panel"`       |
+| **Directory Listings**    | `"index of /" site:example.com`                |
+| **SQL Dumps**             | `filetype:sql "INSERT INTO"`                   |
+| **Camera Feeds**          | `inurl:view/view.shtml`                        |
+| **Search PDFs on a site** | `filetype:pdf site:example.com "confidential"` |
+| **Git Repos Exposed**     | `inurl:.git -github`                           |
+| **Public Logs**           | `filetype:log intext:password`                 |
+
+---
+
+### ⚠️ **Ethical Use Only – Warning!**
+
+> ❌ Don’t use this to target unauthorized websites.
+> ✅ Use for:
+
+* Pentesting your own assets
+* Bug bounty (authorized)
+* OSINT for legal cases
+
+> Violating laws can trigger serious legal action under:
+
+* **CFAA (USA)**
+* **IT Act 2000 (India)**
+* **GDPR & others (EU)**
+
+---
+
+### 📚 **Bonus Resources**
+
+* [Exploit-DB Google Hacking DB](https://www.exploit-db.com/google-hacking-database/)
+* [Google Search Operators Doc](https://support.google.com/websearch/answer/2466433?hl=en)
+
+
+---
 ## 🔍  Search Volume Flex (Just for Fun 😄)
 | 🔑 Keyword                         | 🌐 Global Search Hits |
 | ---------------------------------- | --------------------- |
