Update 9.11 Shodan Recon.md

--- a/2. Reconnaissance/9.11 Shodan Recon.md
+++ b/2. Reconnaissance/9.11 Shodan Recon.md
@@ -1,1 +1,176 @@
-dfd
+
+# 🛰️ **Shodan-Recon**
+
+## **Shodan Recon Overview**
+
+**Shodan** is a search engine for internet-connected devices. It’s widely used in cybersecurity for:
+
+* Reconnaissance
+* Identifying exposed systems & services
+* Mapping attack surfaces
+* Finding potential vulnerabilities
+
+---
+
+### 🌐 Useful Links:
+
+* 🔗 Website: [https://www.shodan.io](https://www.shodan.io)
+* 📚 Filter Reference: [https://www.shodan.io/search/filters](https://www.shodan.io/search/filters)
+
+---
+
+## ⚙️ How Shodan Works
+
+---
+
+### 1. **Global Internet Scanning**
+
+Shodan uses a vast network of scanners to connect to **every public IPv4 address** and **interacts with open ports**, acting like a **banner grabber**.
+
+🔍 For example:
+
+* Connects to `x.x.x.x:80` → saves HTTP headers
+* Connects to `x.x.x.x:21` → saves FTP banner
+
+---
+
+### 2. **Banner Collection**
+
+When Shodan connects to a service, it collects exposed **banners/metadata** such as:
+
+* Software name & version (e.g., Apache 2.4.7)
+* OS type & version
+* SSL certificate details
+* Web server headers
+* Auth methods
+* Error messages
+* Custom HTML titles/messages
+
+---
+
+### 3. **Indexing and Tagging**
+
+Collected data is indexed and **tagged based on**:
+
+* `port:` (e.g., `port:80`)
+* `product:` (e.g., `product:"Apache"`)
+* `org:` (e.g., `org:"Airtel"`)
+* `country:` (e.g., `country:US`)
+* `vuln:` (e.g., `vuln:CVE-2023-12345`)
+* `ssl:` fields
+* `http.component:` (e.g., `http.component:"WordPress"`)
+
+---
+
+### 4. **Vulnerability Matching**
+
+Shodan matches banners with **known CVEs** using:
+
+* National Vulnerability Database (NVD)
+* Internal vulnerability signature sets
+
+If matched, the system flags it as:
+`vuln:CVE-XXXX-XXXX`
+
+---
+
+### 5. **User Interfaces + API Access**
+
+You can access Shodan via:
+
+* 🌐 Web UI: [https://www.shodan.io](https://www.shodan.io)
+* 💻 Shodan CLI
+* 🔑 Shodan API
+* 🔌 Integrations with red team tools & threat intel platforms
+
+---
+
+## 📊 Summary Table
+
+| Stage       | Description                                      |
+| ----------- | ------------------------------------------------ |
+| Scanning    | Shodan probes IPs and ports like a port scanner  |
+| Banner Grab | Collects banner/response data from open services |
+| Parsing     | Extracts product, version, OS, etc.              |
+| Indexing    | Tags with location, org, protocol, etc.          |
+| CVE Mapping | Matches services with known vulnerabilities      |
+| Access      | Web, CLI, and API for searching and automation   |
+
+---
+
+## 🔐 Account Setup
+
+1. Register on [Shodan](https://www.shodan.io).
+2. Visit your [profile](https://account.shodan.io) to get your **API Key**.
+
+---
+
+## 🔍 Basic Search Usage
+
+```
+apache
+ftp
+wordpress
+nginx
+cisco ios
+```
+
+---
+
+## 🎯 Using Filters to Narrow Results
+
+```sh
+apache port:80 country:US
+```
+
+---
+
+## 🔎 Filter Reference
+
+### 🔢 port: — Search by Open Port
+
+```sh
+port:80
+port:443
+port:22
+port:21
+```
+
+🧪 **Examples:**
+
+```sh
+port:80 apache
+device:webcam port:554
+```
+
+---
+
+### 🔧 product: — Search by Specific Service/Product
+
+```sh
+product:"apache"
+product:"apache tomcat"
+product:"Remote Desktop Protocol"
+product:"LiteSpeed httpd"
+```
+
+---
+
+### 🔗 Combined Filters
+
+```sh
+port:8080 product:"Apache Tomcat"
+```
+
+---
+
+### 🌐 http.component: — Web Technologies
+
+```sh
+http.component:"WordPress"
+http.component:"PHP"
+http.component:"MySQL"
+http.component:"Yoast SEO"
+```
+
+---
