Update 9.11 Shodan Recon.md

--- a/2. Reconnaissance/9.11 Shodan Recon.md
+++ b/2. Reconnaissance/9.11 Shodan Recon.md
@@ -337,3 +337,120 @@ hash:-1761231231
 
 
 
+## 🔍 **API Usage Sample (Python)**
+
+```python
+import shodan
+
+API_KEY = 'YOUR_API_KEY'
+api = shodan.Shodan(API_KEY)
+
+results = api.search('apache country:IN')
+
+for result in results['matches']:
+    print(f"IP: {result['ip_str']} | Org: {result.get('org')}")
+```
+
+---
+
+## 🛠️ **Tips for Pentesters**
+
+* Combine filters like:
+  `product:apache port:80 country:IN`
+
+* Use:
+  `has_screenshot:true` → for RDP/Web UI screenshots
+
+* Search for known CVEs using:
+  `vuln:CVE-XXXX-XXXX`
+
+* Use CIDR/ASN to explore specific networks:
+  `net:192.168.1.0/24` or `asn:AS12345`
+
+* Extract domains with:
+  `hostname:"*.example.com"`
+
+---
+
+## 💻 **Shodan CLI Guide**
+
+The Shodan CLI allows you to use Shodan search from the terminal.
+
+---
+
+### 1. ✅ Installation
+
+```bash
+pip install shodan
+```
+
+---
+
+### 2. 🔑 Initialize with Your API Key
+
+```bash
+shodan init YOUR_API_KEY
+```
+
+**Example:**
+
+```bash
+shodan init VWikQRjORSleIJquCKkaRqKHWAOQPp
+```
+
+(This stores your API key locally.)
+
+---
+
+### 3. 🔍 Search
+
+```bash
+shodan search "title:'Apache Tomcat/9.0.97'"
+```
+
+---
+
+### 4. 💾 Download Results
+
+```bash
+shodan download apache-tomcat "title:'Apache Tomcat/9.0.97'" --limit 10
+```
+
+(This saves results in a compressed `.json.gz` format.)
+
+---
+
+### 5. 🧾 Convert Results to JSON
+
+```bash
+shodan parse --fields ip_str,port,org,hostnames apache-tomcat.json.gz
+```
+
+**Optional Fields:**
+
+* `ip_str`
+* `port`
+* `org`
+* `hostnames`
+* `location.city`
+* `ssl.cert.subject.cn`
+* `vulns`
+
+---
+
+### 6. ⚙️ Additional Useful Commands
+
+| Function                  | Command                          |
+| ------------------------- | -------------------------------- |
+| Show Help                 | `shodan --help`                  |
+| Account Info              | `shodan info`                    |
+| Host Lookup               | `shodan host <IP>`               |
+| Example                   | `shodan host 8.8.8.8`            |
+| Scan IP/Range (Paid Plan) | `shodan scan submit <IP>`        |
+| Example                   | `shodan scan submit 192.168.1.1` |
+
+---
+
+
+
+
