Update 9.12 LeakIX Recon.md

--- a/2. Reconnaissance/9.12 LeakIX Recon.md
+++ b/2. Reconnaissance/9.12 LeakIX Recon.md
@@ -1,6 +1,6 @@
 
-# 🕵️‍♂️ LeakIX Recon 
-##  Alternate of Shodan  
+# 🕵️‍♂️ LeakIX Recon -  Alternate of Shodan
+  
 > **LeakIX** is an open-source OSINT engine that helps you discover **exposed credentials, leaky databases, and misconfigured services** across the internet.
 > 📡 It's like Shodan or Censys — but hyper-focused on *real-world data leaks*.
 
