Update 23. GitHub Recon.md

--- a/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
+++ b/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
@@ -1,5 +1,5 @@
 
-# 🐙 GitHub Recon
+# 🐙 1. GitHub Recon
 
 ## 🔹 What is GitHub?
 
@@ -181,7 +181,7 @@ created:2020-01-01..2022-12-31
 
 
 
-# 🐶 GitHound - GitHub Recon Tool
+# 🐶 2. GitHound - GitHub Recon Tool
 
 **GitHound** is a powerful tool designed for **hunting sensitive information** across public GitHub repositories.
 
@@ -297,7 +297,7 @@ git-hound --config config.yml --dig-keyword "api_key"
 
 
 
-# 👻 Wraith - GitHub Recon & Secret Hunter
+# 👻 3. Wraith - GitHub Recon & Secret Hunter
 
 **Wraith** is a powerful GitHub reconnaissance tool designed to **hunt secrets, credentials, sensitive files, and keys** in public repositories using the GitHub API.
 
