Update 25. Image Metadata.md

--- a/2. Reconnaissance (Footprinting)/25. Image Metadata.md
+++ b/2. Reconnaissance (Footprinting)/25. Image Metadata.md
@@ -1,7 +1,6 @@
 
-# 🔥 Image Metadata — Complete Guide for OSINT, DFIR & Cybersecurity
+# 🔥 Image Metadata 
 
----
 
 ## 🖼️ What is Image Metadata?
 
