Update 25. Image Metadata.md

--- a/2. Reconnaissance (Footprinting)/25. Image Metadata.md
+++ b/2. Reconnaissance (Footprinting)/25. Image Metadata.md
@@ -61,6 +61,7 @@
 * Extracts & maps GPS from photos
 * Useful for OSINT, photo mapping
 
+#### 3. [exif](https://exif.tools/)
 ---
 
 ## 🧰 CLI Tools on Kali Linux
