Update 25. Image Metadata.md

--- a/2. Reconnaissance (Footprinting)/25. Image Metadata.md
+++ b/2. Reconnaissance (Footprinting)/25. Image Metadata.md
@@ -62,6 +62,7 @@
 * Useful for OSINT, photo mapping
 
 #### 3. [exif](https://exif.tools/)
+#### 4. [Fotoforensics](https://fotoforensics.com)
 ---
 
 ## 🧰 CLI Tools on Kali Linux
