Update 26. IP Logger.md

--- a/2. Reconnaissance (Footprinting)/26. IP Logger.md
+++ b/2. Reconnaissance (Footprinting)/26. IP Logger.md
@@ -57,7 +57,9 @@ When someone visits the page:
 ---
 
 ### 🧑‍💻 **PHP IP Logger Code (`ip-logger.php`)**
-
+```
+vim ip-logger.php
+```
 ```php
 <?php
 function getRealIpAddr() {
