Update 26. IP Logger.md

--- a/2. Reconnaissance (Footprinting)/26. IP Logger.md
+++ b/2. Reconnaissance (Footprinting)/26. IP Logger.md
@@ -58,10 +58,20 @@ When someone visits the page:
 
 ### 🧑‍💻 **PHP IP Logger Code (`ip-logger.php`)**
 ```
-vim ip-logger.php
+cd /var/www/html
+```
+```
+mkdir ip-logger
+```
+sudo chown -R www-data:www-data ip-logger
+```
+```
+nano ip-logger/ip-logger.php
 ```
 ```php
 <?php
+date_default_timezone_set('Asia/Kolkata');
+
 function getRealIpAddr() {
     if (!empty($_SERVER['HTTP_CLIENT_IP'])) {
         return $_SERVER['HTTP_CLIENT_IP'];
@@ -74,24 +84,24 @@ function getRealIpAddr() {
 
 $realIp = getRealIpAddr();
 $remoteIp = $_SERVER['REMOTE_ADDR'];
-$userAgent = $_SERVER['HTTP_USER_AGENT'] ?? 'Unknown';
+$uri = $_SERVER['REQUEST_URI'] ?? 'Unknown';
 $referrer = $_SERVER['HTTP_REFERER'] ?? 'Direct Access / Unknown';
-$requestUri = $_SERVER['REQUEST_URI'] ?? 'Unknown';
-$dateTime = date('Y-m-d H:i:s');
+$userAgent = $_SERVER['HTTP_USER_AGENT'] ?? 'Unknown';
+$dateTime = date("Y-m-d H:i:s T"); // Time with timezone
 
 $logEntry = <<<LOG
 <hr>
 <b>Date:</b> $dateTime<br>
 <b>IP (REMOTE_ADDR):</b> $remoteIp<br>
 <b>IP (Detected):</b> $realIp<br>
-<b>Page:</b> $requestUri<br>
+<b>Page:</b> $uri<br>
 <b>Referrer:</b> $referrer<br>
 <b>User-Agent:</b> $userAgent<br>
-
 LOG;
 
-file_put_contents('log.html', $logEntry . PHP_EOL, FILE_APPEND | LOCK_EX);
+file_put_contents("log.html", $logEntry . PHP_EOL, FILE_APPEND | LOCK_EX);
 ?>
+
 ```
 
 ---
