Update 26. IP Logger.md

--- a/2. Reconnaissance (Footprinting)/26. IP Logger.md
+++ b/2. Reconnaissance (Footprinting)/26. IP Logger.md
@@ -67,7 +67,7 @@ mkdir ip-logger
 sudo chown -R www-data:www-data ip-logger
 ```
 ```
-nano ip-logger/ip-logger.php
+nano ip-logger/index.php
 ```
 ```php
 <?php
