Update 26. IP Logger.md

--- a/2. Reconnaissance (Footprinting)/26. IP Logger.md
+++ b/2. Reconnaissance (Footprinting)/26. IP Logger.md
@@ -164,7 +164,7 @@ file_put_contents('gps-log.html', $log . PHP_EOL, FILE_APPEND | LOCK_EX);
 ---
 #### 📌 Sample gps-log.html Output
 ```bash
-gps-logger.php
+nano gps-logger.php
 ```
 ```
 <?php
